--- a/src/fancy_form/index.html
+++ b/src/fancy_form/index.html
@@ -16,13 +16,19 @@
 
   <form onsubmit="return validateForm()">
     <label for="input-address">Bitcoin Address</label>
-    <input id="input-address" placeholder="16q4PinynazaMYfv24juNLkbjkDQxJo2dc" />
+    <input id="input-address" placeholder="16q4PinynazaMYfv24juNLkbjkDQxJo2dc" onblur="return validateAddress()" />
+    <div class="validation-msg" id="address-validation-msg">message</div>
+    <div class="empty-space"></div>
 
     <label for="input-amount">Amount to send</label>
     <input class="same-line" type="number" id="input-amount" placeholder="0.0000" /><span class="same-line">BTC</span>
+    <div class="validation-msg" id="amount-validation-msg">message</div>
+    <div class="empty-space"></div>
 
     <label for="input-otp">OTP Authentication</label>
     <input type="number" id="input-otp" placeholder="SMS OTP" />
+    <div class="validation-msg" id="otp-validation-msg">message</div>
+    <div class="empty-space"></div>
 
     <button>SEND BTC</button>
   </form>
