--- a/src/fancy_form/index.html
+++ b/src/fancy_form/index.html
@@ -4,16 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fancy Form</title>
 
-  <!-- You may add more stuff here -->
   <script src="script.js"></script>
   <link href="style.css" rel="stylesheet" />
   <script src="lib/wallet-address-validator.min.js"></script>
 </head>
 
 <body>
-
-  <!-- You may wrap the form in your own elements if necessary. -->
-
   <form onsubmit="return validateForm()">
     <label for="input-address">Bitcoin Address</label>
     <input id="input-address" placeholder="16q4PinynazaMYfv24juNLkbjkDQxJo2dc" onblur="return validateAddress()" />
@@ -21,12 +17,14 @@
     <div class="empty-space"></div>
 
     <label for="input-amount">Amount to send</label>
-    <input class="same-line" type="number" id="input-amount" placeholder="0.0000" /><span class="same-line">BTC</span>
+    <!--assumes that we are only using BTC and no other cryptocurrency. -->
+    <input class="same-line" type="number" id="input-amount" placeholder="0.0000" onblur="" /><span
+      class="same-line">BTC</span>
     <div class="validation-msg" id="amount-validation-msg">message</div>
     <div class="empty-space"></div>
 
     <label for="input-otp">OTP Authentication</label>
-    <input type="number" id="input-otp" placeholder="SMS OTP" />
+    <input type="number" id="input-otp" onblur="return validateOTP()" placeholder="SMS OTP" />
     <div class="validation-msg" id="otp-validation-msg">message</div>
     <div class="empty-space"></div>
 
